fix problem when lauching JOSM with JDK17 and GraalJS